19:27 10/01/2012
version  = 2012011000
- added backup/moodle1/lib.php to restore regexp questions from 1.9 backups
- reverted table qtype_regexp_options to previous name qtype_regexp (pending decision by Tim Hunt to standardize question options table names)
- updated  backup/moodle1/backup and restore files to follow current naming conventions
- ditto for questiontype.php file and db/upgrade.php
----------------------------------------------
16:50 21/12/2011
version 2011122101
- added words hint feature (needs 2011122101 versions of regexpadaptivewithhelp and regexpadaptivewithhelpnopenalty to work)
----------------------------------------------
23:52 17/12/2011
version 2011121701
- moved calculation of alternateanswers to locallib function get_alternateanswers($question)
- stored/cached alternateanswers array in $SESSION for better performance
