@@ -8,7 +8,8 @@
         <FIELD NAME="answers" TYPE="char" LENGTH="255" NOTNULL="true" 
         SEQUENCE="false" ENUM="false" PREVIOUS="questionid" NEXT="usehint"/>
         <FIELD NAME="usehint" TYPE="int" LENGTH="2" NOTNULL="true" UNSIGNED="false" DEFAULT="0" SEQUENCE="false" ENUM="false" PREVIOUS="answers" NEXT="usecase"/>
-        <FIELD NAME="usecase" TYPE="int" LENGTH="1" NOTNULL="true" UNSIGNED="false" DEFAULT="0" SEQUENCE="false" ENUM="false" PREVIOUS="usehint"/>
+        <FIELD NAME="usecase" TYPE="int" LENGTH="1" NOTNULL="true" UNSIGNED="false" DEFAULT="0" SEQUENCE="false" ENUM="false" PREVIOUS="usehint" NEXT="studentshowalternate"/>
+        <FIELD NAME="studentshowalternate" TYPE="int" LENGTH="1" NOTNULL="true" UNSIGNED="false" DEFAULT="0" SEQUENCE="false" ENUM="false"  PREVIOUS="usecase" />
       </FIELDS>
       <KEYS>
         <KEY NAME="primary" TYPE="primary" FIELDS="id" NEXT="questionid"/>
